2011-11-17  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Move WebKit2 C++ APIs to private API and build QML extension plugin on top of that

        A new extension object has been added to QQuickWebView (the same approach should be used
        for other API classes that need experimental APIs). The QML extension mechanism is then
        built on top of the experimental object.

        https://bugs.webkit.org/show_bug.cgi?id=72522

        Reviewed by Simon Hausmann.

        * MiniBrowser/qt/BrowserWindow.cpp:
        (BrowserWindow::BrowserWindow):
        (BrowserWindow::webView):
        * MiniBrowser/qt/BrowserWindow.h:
        * MiniBrowser/qt/UrlLoader.cpp:
        * WebKitTestRunner/qt/PlatformWebViewQt.cpp:
        * qmake/mkspecs/features/default_post.prf:
        * qmake/mkspecs/features/default_pre.prf:
        * qmake/mkspecs/features/qtwebkit-private.prf: Added.
        * qmake/mkspecs/features/qtwebkit.prf:

2011-11-17  Adam Barth  <abarth@webkit.org>

        Move test_results_uploader.py out of layout_package
        https://bugs.webkit.org/show_bug.cgi?id=72590

        Reviewed by Eric Seidel.

        Most of the lines of code in this file are wrong, but I've restrained
        myself and only changed a few of them to generalized this class to the
        common package.

        This is part of a series of patches to remove layout_package.

        * Scripts/webkitpy/common/net/file_uploader.py: Copied from Tools/Scripts/webkitpy/layout_tests/layout_package/test_results_uploader.py.
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/test_results_uploader.py: Removed.

2011-11-17  Adam Barth  <abarth@webkit.org>

        Unreviewed. Fix style nits in printing.py.

        * Scripts/webkitpy/layout_tests/views/printing.py:

2011-11-17  Adam Barth  <abarth@webkit.org>

        Minor style nits in run_webkit_tests.py